# polly

./: .gitignore  .gitleaks.toml  .npmignore  BUG-FIX-SUMMARY.md  Brewfile  CHANGELOG.md  CHANGELOG.polly.md  CLAUDE.md  CONTRIBUTING.md  ENHANCEMENTS_COMPLETE.md  PREVENTION_ANALYSIS.md  README.md  SESSION_SUMMARY.md  STATUS.md  biome.json  build-lib.ts  bun-env.d.ts  deps-notes.json  package.json  package.polly.json  playwright.config.ts  polly-distributed-systems-analysis.md  polly-elysia-middleware-implementation.md  polly-unified-contracts-proposal.md  spa-distributed-systems-research.md  stryker.conf.json  tsconfig.json  tsconfig.lib.json  tsconfig.polly.json  tsconfig.test.json
.claude/: IMPLEMENTATION_PLAN.md
.githooks/: pre-commit
.github/: pull_request_template.md
cli/: polly.ts  template-utils.ts
docs/: ACTIONS.md  ADAPTERS.md  BACKGROUND_SETUP.md  BUILD.md  CSS.md  DX-IMPROVEMENTS.md  ERRORS.md  GETTING-STARTED.md  MESSAGING.md  MIGRATION-DX-ENHANCEMENTS.md  OPTIMIZATION.md  README.md  RFC-041-choosing.md  RFC-041-peer-first-webrtc.md  RFC-041-peer-first.md  STATE.md  TEACH-COMMAND-DESIGN.md  TEST-ISOLATION-SUMMARY.md  TESTING.md  TLA_RESOURCES.md  TYPE_GUARD_IMPLEMENTATION.md  UI.md
examples/: README.md
examples/team-task-manager/crypto/: Cargo.toml
examples/team-task-manager/crypto/src/: lib.rs
patches/: stryker-mutator-bun-runner@0.4.0.patch
playwright-report/: index.html
recipes/: README.md  actions-driven-app.md
scripts/: README.md  build-polly-ui-registry.ts  build-user-extension.ts  check-deps-audit.ts  check-no-as-casting.ts  (+11 more)
(+611 files in other folders)
